# habits

./: Dockerfile  README.md  config.py  docker-compose.yml  loggers.py  main.py  pyproject.toml
backend/: __init__.py  config.py  mailing.py  main.py  models.py  routers.py  utils.py
backend/database/: __init__.py  models.py  queries.py
backend/routers/: __init__.py  models.py  routers.py  services.py  targets.py  users.py
backend/utils/: __init__.py  config.ini  loggers.py  mailing.py
client/: Dockerfile  README.md  main.py  pyproject.toml
client/api/: __init__.py
client/bot/: FSM.py  __init__.py  dispatcher.py  middleware.py
client/controller/: __init__.py
client/handlers/: __init__.py  abyss.py  basic.py  commands.py  options.py  profile.py  targets.py
client/markups/: __init__.py  basic.py  specific.py  targets.py
client/markups/core/: __init__.py
client/routers/: abyss.py  basic.py  targets.py
client/utils/: __init__.py  config.ini  loggers.py  mailing.py  redis.py  scheduler.py
frontend/: FSM.py  __init__.py  config.ini  mailing.py  main.py  middlewares.py  utils.py
interface/: menu.py
server/: Dockerfile  README.md  main.py  pyproject.toml
server/api/: __init__.py  authority.py  models.py  services.py  targets.py  users.py
server/database/: __init__.py  alembic.ini  models.py  queries.py
server/database/migrations/: env.py
server/database/migrations/versions/: 058d97e000f7_.py  17edfc187395_.py  1ca0fa7b10f9_.py  448013955f6d_.py  fab5ab4e58ca_add_default_param_in_completed_datetime_.py
server/utils/: __init__.py  config.ini
(+43 files in other folders)
